Fix blue background on mobile

--- a/global.css
+++ b/global.css
@@ -12,3 +12,7 @@ body {
   margin: 0;
   font-family: 'Source Sans Pro', sans-serif;
 }
+
+* {
+  -webkit-tap-highlight-color: transparent;
+}
